[project]
name = "valentines"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <=3.14"
dependencies = [
    "streamlit (>=1.42.0,<2.0.0)",
    "langgraph (>=0.2.70,<0.3.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-google-genai (>=2.0.9,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
